--- a/useradmin/infoadmin/templates/index.html
+++ b/useradmin/infoadmin/templates/index.html
@@ -3,14 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    {% load staticfiles %}
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css" >
 </head>
 <body>
-    {% if users %}
-
-    {% for user in users %}
-    {{ user.id }}
-    {{ user.username}}
-    {% endfor%}
-{% endif%}
+<div class="table-responsive">
+<table class="table table-dark table-striped table-bordered table-hover table-sm">
+  <thead>
+    <tr>
+      <th scope="col">ID</th>
+      <th scope="col">Port/Username</th>
+      <th scope="col">Server</th>
+      <th scope="col">Password</th>
+      <th scope="col">CreateDate</th>
+      <th scope="col">DueDate</th>
+      <th scope="col">Price</th>
+      <th scope="col">Tag</th>
+    </tr>
+  </thead>
+  <tbody>
+  {% if users %}
+  {% for user in users %}
+    <tr>
+      <th scope="row">{{ user.id }}</th>
+      <td>{{ user.username}}</td>
+      <td>{{ user.server}}</td>
+      <td>{{ user.password}}</td>
+      <td>{{ user.crt_date}}</td>
+      <td>{{ user.due_date}}</td>
+      <td>{{ user.price}}</td>
+      <td>{{ user.tag}}</td>
+    </tr>
+  {% endfor%}
+  {% endif%}
+  </tbody>
+</table>
+    </div>
+<script src="/static/js/bootstrap.min.js"></script>
+<script src="/static/js/jquery-3.3.1.min.js"></script>
 </body>
 </html>
