--- a/useradmin/infoadmin/templates/index.html
+++ b/useradmin/infoadmin/templates/index.html
@@ -2,11 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>UserInfo</title>
     {% load staticfiles %}
     <link rel="stylesheet" href="/static/css/bootstrap.min.css" >
 </head>
 <body>
+    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+      <h5 class="my-0 mr-md-auto font-weight-normal">UserInfo</h5>
+      <nav class="my-2 my-md-0 mr-md-3">
+        <a class="p-2 text-dark" href="#">Features</a>
+        <a class="p-2 text-dark" href="#">Enterprise</a>
+        <a class="p-2 text-dark" href="#">Support</a>
+        <a class="p-2 text-dark" href="#">Pricing</a>
+      </nav>
+      <a class="btn btn-outline-primary" href="#">Login</a>
+    </div>
+{{ now_username}}
 <div class="table-responsive">
 <table class="table table-dark table-striped table-bordered table-hover table-sm">
   <thead>
@@ -29,8 +40,8 @@
       <td>{{ user.username}}</td>
       <td>{{ user.server}}</td>
       <td>{{ user.password}}</td>
-      <td>{{ user.crt_date}}</td>
-      <td>{{ user.due_date}}</td>
+      <td>{{ user.crt_date|date:"Y-m-d"}}</td>
+      <td>{{ user.due_date|date:"Y-m-d"}}</td>
       <td>{{ user.price}}</td>
       <td>{{ user.tag}}</td>
     </tr>
