--- a/useradmin/infoadmin/templates/index.html
+++ b/useradmin/infoadmin/templates/index.html
@@ -17,7 +17,10 @@
       </nav>
       <a class="btn btn-outline-primary" href="#">Login</a>
     </div>
-{{ now_username}}
+<h4>Right Now User Port:{{ now_username}}</h4>
+<h4>Total Income:{{ totalincome}} RMB</h4>
+<h4>Perday Income:{{ averge_perday}} RMB</h4>
+
 <div class="table-responsive">
 <table class="table table-dark table-striped table-bordered table-hover table-sm">
   <thead>
